# underground_29_10

./: README.md
checkers/cryptodurka/: checker.py
checkers/klub-zarya/: klub-zarya-checker.py
checkers/kosmos-150/: checker.py
checkers/krasnyj_oktyabr/: checker_ko.py
services/cryptodurka/: Dockerfile  README.md  docker-compose.yml  init.sql  run.sh
services/cryptodurka/app/: auth.py  crypto.py  db.py  hihihaha.py  main.py
services/cryptodurka/backend/: go.mod  (+2 more)
services/klub-zarya/: .env  Dockerfile  docker-compose.yml  go.mod  go.sum
services/kosmos-150/: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yml
services/kosmos-150/migrations/: migrations.sql
services/kosmos-150/src/: error.rs  lib.rs  main.rs  schema.rs
services/kosmos-150/src/menu/: menu.rs  transaction.rs
services/kosmos-150/src/models/: error.rs  flight.rs  models.rs  user.rs
services/kosmos-150/src/network/: session.rs
services/kosmos-150/src/pkg/: db.rs
services/kosmos-150/src/services/: auth_service.rs  flight_service.rs  services.rs  transaction_service.rs
services/kosmos-150/src/utils/: date.rs  rand.rs
services/krasnyj_oktyabr/: Dockerfile  Dockerfile-build  Dockerfile-prod  README.md  compose.yml  main  main.c
services/krasnyj_oktyabr_prod/: compose.yml  hint.txt  redis.conf
services/zapiski/: Dockerfile  README.md  db.py  docker-compose.yml  encryptor.py  run.sh  zapiski.db  zapiski.py
sploits/cryptodurka/: README.md
sploits/klub-zarya/: README.md  sploit.py
sploits/kosmos-150/: README.md  sploit.py
sploits/krasnyj_oktyabr/: README.md  rce.py
(+44 files in other folders)
