[package]
name = "kosmos150"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }

chrono = "0.4"

diesel = { version = "2.1.3", features = ["postgres", "r2d2"] }
dotenvy = "0.15.7"
lazy_static = "1.4.0"
diesel_migrations = "2.1.0"